--- a/sources/pages.html
+++ b/sources/pages.html
@@ -4,156 +4,10 @@
     <meta charset="UTF-8">
     <title>Trombinoscope</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-
-        body {
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            background: #fdfdfd;
-        }
-
-        .conteneur {
-            width: 1285px;
-            margin: auto;
-        }
-
-        /* Image en haut */
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .header-image {
-            max-width: 300px; /* Ajuster la taille */
-            height: auto;
-            display: block;
-            margin: 0 auto;
-            border-radius: 10px; /* Optionnel : coins arrondis */
-        }
-
-        .cbp-rfgrid {
-            padding: 0;
-            list-style: none;
-            position: relative;
-            width: 100%;
-            margin: auto;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .cbp-rfgrid li {
-            position: relative;
-            float: left;
-            overflow: hidden;
-            width: 300px;
-            padding: 10px;
-        }
-
-        .cbp-rfgrid li a,
-        .cbp-rfgrid li a img {
-            display: block;
-            width: 100%;
-            cursor: pointer;
-        }
-
-        .cbp-rfgrid li a img {
-            max-width: 100%;
-        }
-
-        .poste {
-            text-transform: initial;
-            font-size: 15px;
-            letter-spacing: 2px;
-        }
-
-        .cbp-rfgrid li a div {
-            position: absolute;
-            left: 20px;
-            top: 20px;
-            right: 20px;
-            bottom: 20px;
-            background: rgb(0 0 0 / 31%);
-            display: flex;
-            align-items: center;
-            text-align: center;
-            opacity: 0;
-        }
-
-        .cbp-rfgrid li a:hover div {
-            opacity: 1;
-        }
-
-        .cbp-rfgrid li a div h3 {
-            width: 100%;
-            color: #fff;
-            text-transform: uppercase;
-            font-size: 1.4em;
-            letter-spacing: 2px;
-            padding: 0 10px;
-        }
-
-        .coryR {
-            text-align: center;
-            margin-top: 50px;
-            margin-bottom: 50px;
-            font-size: 15px;
-            color: #333;
-            padding: 20px;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        @media screen and (max-width: 1285px) {
-            .conteneur {
-                width: 962px;
-            }
-        }
-
-        @media screen and (max-width: 970px) {
-            .conteneur {
-                width: 640px;
-            }
-        }
-
-        @media screen and (max-width: 640px) {
-            .conteneur {
-                width: 290px;
-            }
-
-            .cbp-rfgrid li {
-                width: 135px;
-                padding: 5px;
-            }
-
-            .cbp-rfgrid li a div h3 {
-                font-size: 15px;
-            }
-
-            .coryR {
-                margin-top: 30px;
-                margin-bottom: 30px;
-                font-size: 12px;
-                padding: 15px;
-            }
-
-            .poste {
-                font-size: 10px;
-                line-height: 15px;
-                letter-spacing: normal;
-            }
-
-            .cbp-rfgrid li a div {
-                left: 5px;
-                top: 5px;
-                right: 5px;
-                bottom: 5px;
-            }
-        }
-    </style>
+   <link rel="stylesheet" media="all" href="style.css">
 </head>
 <body>
 <div class="conteneur">
-    <!-- Image en haut -->
     <div class="header">
         <img src="https://cdn.discordapp.com/attachments/1351565606738067537/1351569368831754270/Votre_texte_de_paragraphe_3.png?ex=67dada90&is=67d98910&hm=974e5d02e47fa4ddcda79501b11113b3404237438427b122acad76d204411f8a&"
              alt="Promotion" class="header-image">
