Reajustement du code

--- a/sources/pages.html
+++ b/sources/pages.html
@@ -4,29 +4,22 @@
     <meta charset="UTF-8">
     <title>Trombinoscope</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" media="all" href="style.css">
+    <link rel="stylesheet" media="all"    href="/Styles/Style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="conteneur">
-    <div class="header">
-        <img src="https://cdn.discordapp.com/attachments/1351565606738067537/1351569368831754270/Votre_texte_de_paragraphe_3.png?ex=67dada90&is=67d98910&hm=974e5d02e47fa4ddcda79501b11113b3404237438427b122acad76d204411f8a&"
-             alt="Promotion" class="header-image">
+    <div class="conteneur">
+        <div class="header">
+            <h1 class="title">Les 4 Fantastiques</h1>
+            <img src="https://cdn.discordapp.com/attachments/1351565606738067537/1351569368831754270/Votre_texte_de_paragraphe_3.png" alt="Promotion" class="header-image">
+        </div>
+
+        <ul class="cbp-rfgrid">
+            <li><a href="#"><img src="https://zupimages.net/up/22/19/pnsz.jpg" /><div><h3>Marie<br><span class="poste">Responsable Marketing</span></h3></div></a></li>
+            <li><a href="#"><img src="https://zupimages.net/up/22/19/bpud.jpg" /><div><h3>Xavier<br><span class="poste">Co-Fondateur</span></h3></div></a></li>
+            <li><a href="#"><img src="https://zupimages.net/up/22/19/xrc5.jpg" /><div><h3>Louise<br><span class="poste">Référente Clients</span></h3></div></a></li>
+            <li><a href="#"><img src="https://zupimages.net/up/22/19/84pe.jpg" /><div><h3>André<br><span class="poste">Directeur Logiciel</span></h3></div></a></li>
+        </ul>
     </div>
-
-    <ul class="cbp-rfgrid">
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/pnsz.jpg" /><div><h3>Marie<br /><span class="poste">Responsable Marketing</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/bpud.jpg" /><div><h3>Xavier<br /><span class="poste">Co-Fondateur</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/xrc5.jpg" /><div><h3>Louise<br /><span class="poste">Référente Clients</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/84pe.jpg" /><div><h3>André<br /><span class="poste">Directeur Logiciel</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/hv3r.jpg" /><div><h3>Léandro<br /><span class="poste">Expérience Utilisateur</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/ghch.jpg" /><div><h3>Sarah<br /><span class="poste">Testeuse Logiciel</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/fwmg.jpg" /><div><h3>Fanny<br /><span class="poste">Directrice RH</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/4ofz.jpg" /><div><h3>Caroline<br /><span class="poste">Directrice Artistique</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/qm4g.jpg" /><div><h3>Pierre-Luc<br /><span class="poste">Développeur</span></h3></div></a></li>
-        <li><a href="#"><img src="https://zupimages.net/up/22/19/i87n.jpg" /><div><h3>Bertille<br /><span class="poste">Directrice de Projet</span></h3></div></a></li>
-    </ul>
-
-    <div style="clear:both;"></div>
-</div>
 </body>
 </html>
