Ajout d'une image pour test

--- a/sources/pages.html
+++ b/sources/pages.html
@@ -14,11 +14,16 @@
         </div>
 
         <ul class="cbp-rfgrid">
-            <li><a href="#"><img src="https://zupimages.net/up/22/19/pnsz.jpg" /><div><h3>Marie<br><span class="poste">Responsable Marketing</span></h3></div></a></li>
-            <li><a href="#"><img src="https://zupimages.net/up/22/19/bpud.jpg" /><div><h3>Xavier<br><span class="poste">Co-Fondateur</span></h3></div></a></li>
-            <li><a href="#"><img src="https://zupimages.net/up/22/19/xrc5.jpg" /><div><h3>Louise<br><span class="poste">Référente Clients</span></h3></div></a></li>
-            <li><a href="#"><img src="https://zupimages.net/up/22/19/84pe.jpg" /><div><h3>André<br><span class="poste">Directeur Logiciel</span></h3></div></a></li>
+            <li><a href="#"><img src="https://zupimages.net/up/22/19/pnsz.jpg" /><div><h3>Ronelle<br><span class="poste">Directrice SI</span></h3></div></a></li>
+            <li><a href="#"><img src="/Images/PhotoJM.jpg" class="wide-image" /><div><h3>Jean-Marie<br><span class="poste">Directeur Adjoint SI</span></h3></div></a></li>
+            <li><a href="#"><img src="https://zupimages.net/up/22/19/xrc5.jpg" /><div><h3>Tony<br><span class="poste">Responsable SSI</span></h3></div></a></li>
+            <li><a href="#"><img src="https://zupimages.net/up/22/19/84pe.jpg" /><div><h3>Abass<br><span class="poste">Chef De Service </span></h3></div></a></li>
         </ul>
     </div>
+
+    <footer class="footer">
+        <p class="citation">&laquo; Rien n'est impossible. Il n'y a que ce que l'on veut, ce que l'on ne veut pas. L'impossible est le refuge des poltrons. &raquo;</p>
+    </footer>
+
 </body>
 </html>
