Ajout d'une image

--- a/sources/pages.html
+++ b/sources/pages.html
@@ -15,7 +15,7 @@
 
         <ul class="cbp-rfgrid">
             <li><a href="#"><img src="https://zupimages.net/up/22/19/pnsz.jpg" /><div><h3>Ronelle<br><span class="poste">Directrice SI</span></h3></div></a></li>
-            <li><a href="#"><img src="/Images/PhotoJM.jpg" class="wide-image" /><div><h3>Jean-Marie<br><span class="poste">Directeur Adjoint SI</span></h3></div></a></li>
+            <li><a href="#"><img src="/Images/IMGJM.JPG" class="wide-image" /><div><h3>Jean-Marie<br><span class="poste">Directeur Adjoint SI</span></h3></div></a></li>
             <li><a href="#"><img src="https://zupimages.net/up/22/19/xrc5.jpg" /><div><h3>Tony<br><span class="poste">Responsable SSI</span></h3></div></a></li>
             <li><a href="#"><img src="https://zupimages.net/up/22/19/84pe.jpg" /><div><h3>Abass<br><span class="poste">Chef De Service </span></h3></div></a></li>
         </ul>
